--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 
 h1
 {
-    font-size: 3.5rem;
+    font-size: 3rem;
     
 
 
@@ -59,7 +59,7 @@ h3
     margin: 3rem;
     padding:1rem;
     text-align: center;
-    background-color: var(--darkerblue)
+    background-color: var(--darkerblue);
 
 }
 
@@ -94,7 +94,7 @@ button
     border-radius: 0.5rem;
     background-color: var(--purple);
     color:var(--darkblue);
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight:900;
 
 }
